k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-microservices
  labels:
    istio-injection: enabled
    environment: development
