k8s/aioperator-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aioperator-service
  namespace: go-microservices
  labels:
    app: aioperator
    component: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aioperator
      component: service
  template:
    metadata:
      labels:
        app: aioperator
        component: service
    spec:
      containers:
      - name: aioperator-service
        image: filstimatias/aiop:v1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8086
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: aioperator-service
  namespace: go-microservices
  labels:
    app: aioperator
    component: service
spec:
  ports:
  - port: 8086
    targetPort: 8086
    name: http
  selector:
    app: aioperator
    component: service
