k8s/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: go-microservices
  labels:
    app: authentication
    component: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
      component: service
  template:
    metadata:
      labels:
        app: authentication
        component: service
    spec:
      containers:
      - name: authentication-service
        image: filstimatias/auth:v2.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: go-microservices
  labels:
    app: authentication
    component: service
spec:
  ports:
  - port: 8082
    targetPort: 8082
    name: http
  selector:
    app: authentication
    component: service
