k8s/backend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-service
  namespace: go-microservices
  labels:
    app: backend
    component: service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      component: service
  template:
    metadata:
      labels:
        app: backend
        component: service
    spec:
      containers:
      - name: backend-service
        image: filstimatias/back:v1.14
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: go-microservices
  labels:
    app: backend
    component: service
spec:
  ports:
  - port: 8081
    targetPort: 8081
    name: http
  selector:
    app: backend
    component: service
