k8s/api-gateway.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: GatewayClass
# metadata:
#   name: istio
# spec:
#   controllerName: istio.io/gateway-controller
#   description: The default Istio GatewayClass
# ---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: microservices-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    protocol: HTTP
    #hostname: "*.example.com"
    port: 8080
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentication-route
  namespace: go-microservices
spec:
  parentRefs:
  - name: microservices-gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/auth
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: authentication-service
      namespace: go-microservices
      port: 8082
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: go-microservices
spec:
  parentRefs:
  - name: microservices-gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /auth
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: backend-service
      port: 8081
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: go-microservices
spec:
  parentRefs:
  - name: microservices-gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 8085
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: aioperator-route
  namespace: go-microservices
spec:
  parentRefs:
  - name: microservices-gateway
    namespace: istio-ingress
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /operator
    backendRefs:
    - name: aioperator-service
      port: 8086
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: go-microservices
spec:
  mtls:
    mode: PERMISSIVE
